--- a/src/messagewidget.ui
+++ b/src/messagewidget.ui
@@ -181,6 +181,18 @@
          <property name="spacing">
           <number>0</number>
          </property>
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
          <item>
           <widget class="ClickableLabel" name="label_content_image">
            <property name="toolTip">
