--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>452</width>
-    <height>556</height>
+    <width>471</width>
+    <height>558</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -750,6 +750,13 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
+        <widget class="QCheckBox" name="cb_force_plaintext">
+         <property name="text">
+          <string>Force plain text in the message widget</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QGroupBox" name="groupbox_image_popup">
          <property name="title">
           <string>Image pop-up for image URLs</string>
@@ -1120,6 +1127,7 @@
   <tabstop>cb_custom_tray_error</tabstop>
   <tabstop>line_custom_tray_error</tabstop>
   <tabstop>pb_custom_tray_error</tabstop>
+  <tabstop>cb_force_plaintext</tabstop>
   <tabstop>groupbox_image_popup</tabstop>
   <tabstop>spin_popup_w</tabstop>
   <tabstop>spin_popup_h</tabstop>
@@ -1144,8 +1152,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>445</x>
-     <y>549</y>
+     <x>461</x>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -1160,8 +1168,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>445</x>
-     <y>549</y>
+     <x>461</x>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
@@ -1176,8 +1184,8 @@
    <slot>clearCache()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>106</x>
-     <y>361</y>
+     <x>111</x>
+     <y>376</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1192,8 +1200,8 @@
    <slot>openCache()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>196</x>
-     <y>361</y>
+     <x>197</x>
+     <y>376</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1208,8 +1216,8 @@
    <slot>saveSettings()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>445</x>
-     <y>549</y>
+     <x>461</x>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>23</x>
@@ -1224,8 +1232,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>343</x>
-     <y>109</y>
+     <x>342</x>
+     <y>107</y>
     </hint>
     <hint type="destinationlabel">
      <x>412</x>
@@ -1240,8 +1248,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>343</x>
-     <y>147</y>
+     <x>342</x>
+     <y>140</y>
     </hint>
     <hint type="destinationlabel">
      <x>411</x>
@@ -1256,8 +1264,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>120</x>
-     <y>175</y>
+     <x>143</x>
+     <y>170</y>
     </hint>
     <hint type="destinationlabel">
      <x>408</x>
@@ -1272,8 +1280,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>189</x>
-     <y>203</y>
+     <x>212</x>
+     <y>200</y>
     </hint>
     <hint type="destinationlabel">
      <x>410</x>
@@ -1288,8 +1296,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>206</x>
-     <y>231</y>
+     <x>229</x>
+     <y>230</y>
     </hint>
     <hint type="destinationlabel">
      <x>409</x>
@@ -1352,8 +1360,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>119</x>
-     <y>91</y>
+     <x>139</x>
+     <y>138</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1368,8 +1376,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>218</x>
-     <y>91</y>
+     <x>256</x>
+     <y>138</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1384,8 +1392,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>77</x>
-     <y>287</y>
+     <x>88</x>
+     <y>281</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1400,8 +1408,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>162</x>
-     <y>278</y>
+     <x>163</x>
+     <y>298</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1432,8 +1440,8 @@
    <slot>titleFont()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>203</x>
-     <y>219</y>
+     <x>191</x>
+     <y>215</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1449,7 +1457,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>406</x>
-     <y>219</y>
+     <y>215</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1464,8 +1472,8 @@
    <slot>messageFont()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>380</x>
-     <y>230</y>
+     <x>265</x>
+     <y>254</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1496,8 +1504,8 @@
    <slot>applicationFont()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>106</x>
-     <y>226</y>
+     <x>94</x>
+     <y>195</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1512,8 +1520,8 @@
    <slot>applicationFont()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>106</x>
-     <y>185</y>
+     <x>94</x>
+     <y>169</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1528,8 +1536,8 @@
    <slot>selectedApplicationFont()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>312</x>
-     <y>170</y>
+     <x>309</x>
+     <y>169</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1544,8 +1552,8 @@
    <slot>applicationIcon()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>64</x>
-     <y>185</y>
+     <x>66</x>
+     <y>169</y>
     </hint>
     <hint type="destinationlabel">
      <x>6</x>
@@ -1560,8 +1568,8 @@
    <slot>applicationIcon()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>64</x>
-     <y>226</y>
+     <x>66</x>
+     <y>195</y>
     </hint>
     <hint type="destinationlabel">
      <x>5</x>
@@ -1576,8 +1584,8 @@
    <slot>messageApplicationIcon()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>171</x>
-     <y>219</y>
+     <x>159</x>
+     <y>215</y>
     </hint>
     <hint type="destinationlabel">
      <x>2</x>
@@ -1592,8 +1600,8 @@
    <slot>mainButton()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>407</x>
-     <y>169</y>
+     <x>413</x>
+     <y>168</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1608,8 +1616,8 @@
    <slot>mainButton()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>421</x>
-     <y>170</y>
+     <x>427</x>
+     <y>169</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1624,8 +1632,8 @@
    <slot>statusLabel()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>131</x>
-     <y>170</y>
+     <x>144</x>
+     <y>169</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1640,8 +1648,8 @@
    <slot>messageButton()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>420</x>
-     <y>219</y>
+     <x>426</x>
+     <y>215</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -1656,8 +1664,8 @@
    <slot>resetFontsSizes()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>154</x>
-     <y>112</y>
+     <x>132</x>
+     <y>107</y>
     </hint>
     <hint type="destinationlabel">
      <x>408</x>
@@ -1688,8 +1696,8 @@
    <slot>messagePriority()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>132</x>
-     <y>273</y>
+     <x>145</x>
+     <y>260</y>
     </hint>
     <hint type="destinationlabel">
      <x>4</x>
@@ -1720,8 +1728,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>256</x>
-     <y>165</y>
+     <x>257</x>
+     <y>218</y>
     </hint>
     <hint type="destinationlabel">
      <x>555</x>
@@ -1736,8 +1744,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>103</x>
-     <y>174</y>
+     <x>139</x>
+     <y>218</y>
     </hint>
     <hint type="destinationlabel">
      <x>550</x>
@@ -1752,12 +1760,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>36</x>
-     <y>385</y>
+     <x>59</x>
+     <y>380</y>
     </hint>
     <hint type="destinationlabel">
-     <x>412</x>
-     <y>393</y>
+     <x>438</x>
+     <y>381</y>
     </hint>
    </hints>
   </connection>
@@ -1768,12 +1776,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>39</x>
-     <y>424</y>
+     <x>62</x>
+     <y>412</y>
     </hint>
     <hint type="destinationlabel">
-     <x>415</x>
-     <y>428</y>
+     <x>438</x>
+     <y>413</y>
     </hint>
    </hints>
   </connection>
@@ -1784,12 +1792,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>39</x>
-     <y>351</y>
+     <x>62</x>
+     <y>348</y>
     </hint>
     <hint type="destinationlabel">
-     <x>421</x>
-     <y>347</y>
+     <x>438</x>
+     <y>349</y>
     </hint>
    </hints>
   </connection>
@@ -1800,12 +1808,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>45</x>
-     <y>350</y>
+     <x>68</x>
+     <y>348</y>
     </hint>
     <hint type="destinationlabel">
-     <x>219</x>
-     <y>343</y>
+     <x>222</x>
+     <y>349</y>
     </hint>
    </hints>
   </connection>
@@ -1816,12 +1824,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>50</x>
+     <x>73</x>
      <y>380</y>
     </hint>
     <hint type="destinationlabel">
-     <x>181</x>
-     <y>384</y>
+     <x>222</x>
+     <y>381</y>
     </hint>
    </hints>
   </connection>
@@ -1832,12 +1840,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>46</x>
-     <y>426</y>
+     <x>69</x>
+     <y>412</y>
     </hint>
     <hint type="destinationlabel">
-     <x>170</x>
-     <y>423</y>
+     <x>222</x>
+     <y>413</y>
     </hint>
    </hints>
   </connection>
@@ -1848,8 +1856,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>52</x>
-     <y>351</y>
+     <x>75</x>
+     <y>348</y>
     </hint>
     <hint type="destinationlabel">
      <x>645</x>
@@ -1864,8 +1872,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>59</x>
-     <y>391</y>
+     <x>82</x>
+     <y>380</y>
     </hint>
     <hint type="destinationlabel">
      <x>585</x>
@@ -1880,8 +1888,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>47</x>
-     <y>430</y>
+     <x>70</x>
+     <y>412</y>
     </hint>
     <hint type="destinationlabel">
      <x>582</x>
@@ -1896,8 +1904,8 @@
    <slot>trayPathChanged(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>337</x>
-     <y>350</y>
+     <x>222</x>
+     <y>349</y>
     </hint>
     <hint type="destinationlabel">
      <x>554</x>
@@ -1912,8 +1920,8 @@
    <slot>trayPathUnreadChanged(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>293</x>
-     <y>388</y>
+     <x>222</x>
+     <y>381</y>
     </hint>
     <hint type="destinationlabel">
      <x>573</x>
@@ -1928,8 +1936,8 @@
    <slot>trayPathErrorChanged(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>273</x>
-     <y>427</y>
+     <x>222</x>
+     <y>413</y>
     </hint>
     <hint type="destinationlabel">
      <x>591</x>
@@ -1944,8 +1952,8 @@
    <slot>openCustomTray()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>413</x>
-     <y>335</y>
+     <x>438</x>
+     <y>349</y>
     </hint>
     <hint type="destinationlabel">
      <x>498</x>
@@ -1960,8 +1968,8 @@
    <slot>openCustomTrayUnread()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>404</x>
-     <y>382</y>
+     <x>438</x>
+     <y>381</y>
     </hint>
     <hint type="destinationlabel">
      <x>550</x>
@@ -1976,12 +1984,28 @@
    <slot>openCustomTrayError()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>417</x>
-     <y>420</y>
+     <x>438</x>
+     <y>413</y>
     </hint>
     <hint type="destinationlabel">
      <x>537</x>
      <y>425</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cb_force_plaintext</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>SettingsDialog</receiver>
+   <slot>changed()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>72</x>
+     <y>71</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>617</x>
+     <y>443</y>
     </hint>
    </hints>
   </connection>
