allow 0 minimum priority in settings dialog

--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>471</width>
-    <height>582</height>
+    <height>545</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -115,7 +115,7 @@
           <item row="0" column="1">
            <widget class="QSpinBox" name="spin_priority">
             <property name="minimum">
-             <number>1</number>
+             <number>0</number>
             </property>
             <property name="maximum">
              <number>10</number>
@@ -759,7 +759,7 @@
        <item>
         <widget class="QCheckBox" name="cb_message_fallback">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enabling this will display wide messages in a different widget which handles wordwrapping better. This can be useful when the delete button and text are cut off and no longer visible. The downside is that the horizontal size of this widget is not adjusted to the length of the message.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enabling this will display wide messages in a different widget which handles wordwrapping better. This can be useful when the delete button and text are cut off and no longer visible. The downside is that the vertical size of this widget is not adjusted to the length of the message.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="text">
           <string>MessageWidget: fallback to QTextBrowser if message is too wide</string>
